kubernetes/argocd/moonbase/manifests/backrest/backrest.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backrest
  labels:
    app: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backrest
  template:
    metadata:
      labels:
        app: backrest
    spec:
      containers:
        - name: backrest
          image: garethgeorge/backrest:v1.14.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
          volumeMounts:
            - name: backrest-data
              mountPath: /data
            - name: main-cephfs
              mountPath: /userdata
            - name: backups-volume
              mountPath: /repos             
      volumes:
        - name: backrest-data
          persistentVolumeClaim:
            claimName: backrest-data
        - name: main-cephfs
          nfs:
            server: ceph-nfs.home
            path: /cephfs
        - name: backups-volume
          hostPath:
            path: /tank/backups # directory location on host
            type: Directory # this field is optional
