kubernetes/argocd/moonbase/manifests/backrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backrest
spec:
  selector:
    app: backrest
  ports:
  - name: http
    port: 80
    targetPort: 9898
